[JP-2522] Fixed the buttons in the toolbars so that they are fully visible. Also made the button background in the framed panels transparent.

--- a/copl/com.elster.jupiter.extjs/src/main/web/js/ext/packages/uni-theme-skyline/sass/src/panel/Panel.scss
+++ b/copl/com.elster.jupiter.extjs/src/main/web/js/ext/packages/uni-theme-skyline/sass/src/panel/Panel.scss
@@ -44,6 +44,10 @@ $ui-body-background-color: $panel-filter-background-color
     .#{$prefix}panel-header-text-container {
       color: $panel-frame-header-color;
     }
+
+      .#{$prefix}btn-default-small {
+          background-color: transparent;
+      }
   }
   .#{$prefix}panel-header-top {
     padding: $panel-frame-header-padding;
